--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-niveau1-page></app-niveau1-page>
+<router-outlet></router-outlet>
 <!-- <app-niveau2-page></app-niveau2-page> -->
 <!-- <app-solve-houston-problem></app-solve-houston-problem> -->
-
