--- a/src/app/solve-houston-problem/solve-houston-problem.component.html
+++ b/src/app/solve-houston-problem/solve-houston-problem.component.html
@@ -1,12 +1,56 @@
-<div class="niveau1-fond pb-2">
-  <div class="container niveau1-fond">
-          <div class="row">
-            <div class = "col-5 rectangle mt-4">
+<div class="container.fluid niveau1-fond">
+  <div class="container.fluid niveau1-fond d-flex align-items-center">
+          <div class="row d-flex justify-content-lg-center">
+            <div class="col-12 col-lg-6 col-md-6 offset-md-0 d-none d-sm-none d-md-block d-lg-block">
+              <div class="fontsizecard offset-lg-5">
+                THIS IS THE CODE TO DECRYPT
+              </div>
             </div>
-            <div class = "col-5 rectangle ml-5 mt-4">
+            <div class="col-12 col-lg-6 col-md-6">
+              <div class="fontsizecard">
+                PLACE THE NUMBERS LIKE THE MODEL
+              </div>
             </div>
+            <div style="width: 240px;" class="rectangle mt-3 ml-5 ml-sm-5 ml-md-5 ml-lg-0">
+              <div class = "col-10 col-lg-4 col-md-4 col-sm-4 tailleblocchiffres">
+                  <div class="tailleblocchiffres">
+                
+                12233232<span class="text-success chiffre">321432143</span>
+                24532954385439580
+                258432594258429<span class="text-white chiffre">52
+                38594354428549459
+                1223</span>3232321432145
+                2453295<span class="text-danger chiffre">4385439582
+                258</span>43259425842956
+                38594354428549452
+                  </div>
+              </div>
+            </div>
+            <div class="col-1">
+            </div>
+
+            <div class = "col-10 col-lg-3 col-md-4 col-sm-5 mt-4 ml-5 ml-sm-5 ml-md-5 ml-lg-0 ml-lg-4">
+
+                <div id="mytxt" class="chiffre" contenteditable="true">
+                    12233232<span style="color: green;" class="chiffre">321432143</span>
+                    24532954385439580
+                    258432594258429<span style="color: white;" class="chiffre">52
+                    38594354428549459
+                    1223</span>323232<span class="chiffre">1324843</span>
+                    2764236<span style="color: red;" class="chiffre">4325942582
+                    258</span><span style="color: black;" class="chiffre">43259425842956
+                    38594354428549452</span>                    
+                 </div>
+              
+            </div>
+            <div id="AfficherReponse" class="col-6 col-lg-4 col-md-6 offset-2 offset-md-4 offset-lg-4 mt-5 mr-2">
+                    <div id="boutongetyourreward" routerLink="fixedBug" class="col-12 col-md-12 col-lg-6">
+                        <a class="encrelune" href="#fixed-bug-page">
+                        <button type="button" (click)="moveToResponse()" class="btn bgcolor btn-block font-weight-bold font-subtitle">SEND</button>
+                        </a>
+                    </div>
+            </div> 
           </div>    
   </div>
 </div>
-
-<router-outlet id = "lune"></router-outlet> 
+<app-fixed-bug id="fixed-bug-page" class="hidden"></app-fixed-bug>
