--- a/src/app/solve-houston-problem/solve-houston-problem.component.css
+++ b/src/app/solve-houston-problem/solve-houston-problem.component.css
@@ -1,20 +1,21 @@
 .titlecolor {
-    color:#FFD45C;
+  color: #FFD45C;
 }
 
 .bgcolor {
-    background-color: #FFD45C;
-    border-radius: 0px;
+  background-color: #FFD45C;
+  border-radius: 0px;
 }
 
 .bgcontainer {
-    background-color: #cfdbfc;
+  background-color: #cfdbfc;
 }
 
 .niveau1-fond {
-    background-color: #0000FF;
-    width: 100%;
-    height: 100%;  
+  background-color: #6db1ff;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 /* .backgroundimage {
@@ -25,36 +26,58 @@
 
 
 .textcolor {
-    color: white;
+  color: white;
 }
 
 .fontbuttonsize {
-    font-size: 0.6rem;
-    color: #1d1d2d;
+  font-size: 0.6rem;
+  color: #1d1d2d;
 }
 
 .answerfontsize {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 
 .pageSize {
-    width: 100%;
-    min-height: 100%;
-    max-height: 100%;
+  width: 100%;
+  min-height: 100%;
+  max-height: 100%;
 }
 
 .no-gutters {
-margin-right: 0;
-margin-left: 0;
-} 
+  margin-right: 0;
+  margin-left: 0;
+}
 
 .encrelune {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .rectangle {
-    border-style: solid;
-    width: 100em;
-    height: 50em;
+  border-style: solid;
+  /* width: 40px;
+  margin: 30px; */
 }
+
+.chiffre {
+  font-size: 20px;
+}
+
+.tailleblocchiffres {
+  font-size: 20px;
+}
+
+.fontsizecard {
+  font-size: 1.5em;
+  color: white;
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    height: 500px;
+    font-size: 3em;
+    line-height: 0.8em; 
+    background-color: #6db1ff;
+  }
