--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,8 @@
 
     <div id="logo" class="">
-            <button type="button" (click)="showMenu()"  id="burger" class="icone nav-a" style="background-image: url(../assets/Logo.png);"></button>
+            <button type="button" (click)="showMenu()"  id="burger" class="icone2 nav-a" style="background-image: url(../assets/Logo.png);"></button>
         </div>
-        <!-- <div>
-            <button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Burger.png);"></button>
-        </div> -->
+       
     
          <div id="bigMenu" class="font-subtitle bigMenu hidden" >
             <div class="col-12 icone">
@@ -15,12 +13,12 @@
                 </button>
             </div>
             <div>
-                <button type="button" (click)="hideMenu()" id="menuLink"  class="icone" style="background-image: url(../../assets/Sattelite.png);">
+                <button type="button" (click)="hideMenu()" id="menuLink"  class="icone3" style="background-image: url(../../assets/Sattelite.png);">
                     <a routerLink="niveau1" class="lienNavBar nav-a" href=""><form><strong>EXPLORATION</strong></form></a>
                 </button>
             </div> 
             <div>
-                <button type="button" (click)="hideMenu()" id="menuLink"  class="icone" style="background-image: url(../../assets/Tableau.png);">
+                <button type="button" (click)="hideMenu()" id="menuLink"  class="icone3" style="background-image: url(../../assets/Tableau.png);">
                     <a routerLink="tableau-de-bord" class="lienNavBar nav-a" href=""><form><strong>TABLEAU DE BORD</strong></form></a>
                 </button>
             </div>
