--- a/src/app/fixed-bug/fixed-bug.component.html
+++ b/src/app/fixed-bug/fixed-bug.component.html
@@ -18,10 +18,7 @@
     <div class="col-0 col-lg-12 col-sm-12 col-md-12 mt-lg-5 mt-md-5"></div>
     <div class="col-0 col-lg-12 col-sm-12 col-md-12 mt-lg-5 mt-md-5"></div>
     <div class="col-0 col-lg-12 col-sm-12 col-md-12 mt-0"></div>
-    <div class="col-lg-3 col-sm-3 offset-lg-9 offset-3 offset-sm-8 font-subtitlebug subtitlecolor d-flex align-items-end marginbug mt-5">
-        CONTINUE
-        <img src="../../assets/trianglejaune.png" class="img-fluid mb-2" alt="Responsive image">
-    </div>
+    <div routerLink="/we-ll-be-back" id="niveau2-button-to-teaser" class="col-lg-3 col-sm-3 offset-lg-9 offset-3 offset-sm-8 font-subtitlebug subtitlecolor d-flex align-items-end marginbug mt-5">CONTINUE</div>
   </div>
 </div>
 
