--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -52,8 +52,8 @@
     <div class="col-12 col-sm-12 col-md-6 zoneContinue" >
       <div class="row">
         <div class="col-sm-12 offset-md-5 col-md-5 offset-lg-7 col-lg-5 font-title continueButtom">
-          <H5 id="button" routerLink="tableau-de-bord" class="lienNavBar nav-a" style="white-space: nowrap;">CONTINUE
-            <span class="continueArrow">▶</span></H5>
+          <button id="button" routerLink="/niveau2" class="lienNavBar nav-a" style="white-space: nowrap;">CONTINUE
+            </button>
         </div>
       </div>
     </div>
