--- a/src/app/tableau-de-bord/tableau-de-bord.component.html
+++ b/src/app/tableau-de-bord/tableau-de-bord.component.html
@@ -3,7 +3,7 @@
         <!-- Earth -->
             <div id="tableau-de-bord-earth-position" class="tableau-de-bord-position">
                 <div id="tableau-de-bord-earth-container" class="tableau-de-bord-planet-container">
-                    <div id="tableau-de-bord-earth-point-container" class="tableau-de-bord-point-container">  
+                    <div id="tableau-de-bord-earth-point-container" routerLink="/niveau1" class="tableau-de-bord-point-container">  
                         <div id="tableau-de-bord-earth-point" class="tableau-de-bord-point"><div class="tableau-de-bord-innerpoint"></div></div>
                         <div class="tableau-de-bord-point-title"><p>Niveau 1</p></div>
                     </div>
@@ -28,7 +28,7 @@
         <!-- Moon -->
             <div id="tableau-de-bord-moon-position" class="tableau-de-moon-position">
                 <div id="tableau-de-bord-moon-container" class="tableau-de-bord-planet-container">
-                    <div id="tableau-de-bord-moon-point-container" class="tableau-de-bord-point-container">  
+                    <div id="tableau-de-bord-moon-point-container" routerLink="/niveau2" class="tableau-de-bord-point-container">  
                         <div id="tableau-de-bord-moon-point" class="tableau-de-bord-point"><div class="tableau-de-bord-innerpoint"></div></div>
                         <div class="tableau-de-bord-point-title"><p>Niveau 2</p></div>
                     </div>
