--- a/src/app/fixed-bug/fixed-bug.component.css
+++ b/src/app/fixed-bug/fixed-bug.component.css
@@ -1,7 +1,7 @@
 .fond {
     background-color: black;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
 
 }
@@ -16,7 +16,15 @@
     letter-spacing: 0.05rem;
     font-weight: 500;
 }
-
+#niveau2-button-to-teaser:hover {
+    cursor: pointer;
+}
+#niveau2-button-to-teaser:focus {
+    outline: none;
+}
+#niveau2-button-to-teaser:active {
+    opacity: 0.7;
+}
 /* .marginbug {
     margin-top: 20em;
 } */
