--- a/src/app/niveau2-page/niveau2-page.component.css
+++ b/src/app/niveau2-page/niveau2-page.component.css
@@ -14,7 +14,7 @@
 .niveau1-fond {
     background-color: #0000FF;
     width: 100%;
-    height: 100%;  
+    height: 100vh;  
 }
 
 /* .backgroundimage {
