--- a/src/app/tableau-de-bord/tableau-de-bord.component.css
+++ b/src/app/tableau-de-bord/tableau-de-bord.component.css
@@ -61,6 +61,9 @@
     flex-direction: row;
     z-index: 2;
 }
+.tableau-de-bord-point-container:focus {
+    outline:none;
+}
 .tableau-de-bord-point{
     width: 2em;
     height: 2em;
