Dev merge with teaser

--- a/src/app/page-teaser/page-teaser.component.html
+++ b/src/app/page-teaser/page-teaser.component.html
@@ -1,4 +1,5 @@
 <div id='teaser-background'>
+  <div id="teaser-intro">to be continued in ...</div>
   <div id="teaser-image"></div>
   <div id="teaser-numero">2</div>
   <div id="teaser-title">THE RETURN OF THE SATELLITE</div>
